# VersatileFilmGrain

./: CMakeLists.txt  LICENSE  README.md  fgc-designer.py
cfg/: fgs_afgs1_test1.cfg  fgs_afgs1_test1.tbl  fgs_afgs1_test10.cfg  fgs_afgs1_test11.cfg  fgs_afgs1_test12.cfg  fgs_afgs1_test14.cfg  fgs_afgs1_test15.cfg  fgs_afgs1_test16.cfg  fgs_afgs1_test2.cfg  fgs_afgs1_test3.cfg  fgs_afgs1_test4.cfg  fgs_afgs1_test5.cfg  fgs_afgs1_test6.cfg  fgs_afgs1_test7.cfg  fgs_afgs1_test8.cfg  fgs_afgs1_test9.cfg  fgs_sei.cfg  fgs_sei_ar_test1.cfg  fgs_sei_dump.txt  fgs_sei_ff_test1.cfg  fgs_sei_ff_test2.cfg  fgs_sei_ff_test3.cfg  fgs_sei_ff_test4.cfg  fgs_sei_ff_test5.cfg  fgs_sei_ff_test6.cfg  fgs_sei_ff_test7.cfg
src/: vfgs_fw.c  vfgs_fw.h  vfgs_hw.c  vfgs_hw.h  vfgs_main.c  yuv.c  yuv.h
